--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -53,6 +53,9 @@
   z-index: 10;
   background: var(--clr-bg);
   padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav__list {
